# menschbot

./: .gitignore  504_words.json  504_words_v2.json  Dockerfile  README.md  chatgpt_module.py  documentation.md  german_A2_modal_verbs.json  german_A2_modal_verbs_quiz.json  german_A2_trotzdem_quiz.json  german_A2_verbs_learn.json  german_A2_verbs_quiz.json  german_a22_nouns.json  german_adjectives.json  german_fragewort.json  german_nouns1.json  german_prepositions.json  german_reflexiv.json  german_story_A.json  main.py  news_2024-11-07.json  news_2024-11-08.json  pyproject.toml  requirements.txt  sample-news.json
.github/workflows/: python-ci.yml
handlers/: admin_commands.py
models/: model_users.py
news/: chatgpt_module.py  news.py  tagesschauApi.py  taggeschau-response.json
tests/: test_start_handler.py
utils/: __init__.py  db.py  keyboards.py
